--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,28 @@
 </head>
 <body>
   <h1>Lasagna</h1>
+  <img src="../images/images.jpg" alt="Lasagna Picture">
+  <h3>Description</h3>
+  <p>Lasagna is a wide, flat sheet of pasta. Lasagna can refer to either the type of noodle or to the typical lasagna dish which is a dish made with several layers of lasagna sheets with sauce and other ingredients, such as meats and cheese, in between the lasagna noodles.</p>
+  <h3>Ingredients</h3>
+  <ul>
+    <li>Meat</li>
+    <li>Onion and Garlic</li>
+    <li>Tomato products</li>
+    <li>Sugar</li>
+    <li>Spices and seasoning</li>
+    <li>Lasagna noodles</li>
+    <li>Cheeses</li>
+    <li>Eggs</li>
+  </ul>
+  <h3>Steps</h3>
+  <ol>
+    <li>Make the meat sauce.</li>
+    <li>Cook the noodles.</li>
+    <li>Make the ricotta mixture.</li>
+    <li>Layer the lasagna according to the recipe instructions.</li>
+    <li>Cover with foil and bake.</li>
+    <li>Let the lasagna rest before serving.</li>
+  </ol>
 </body>
 </html>
